--- a/Swift Documentation/2.Language Guide/1.The Basics.md
+++ b/Swift Documentation/2.Language Guide/1.The Basics.md
@@ -859,8 +859,81 @@ let convertedNumber = Int(possibleNumber)
 
 ### nil
 
+옵셔널 변수에 특수한 값 `nil` 로 할당하여 값이 없는 상태로 설정할 수 있습니다.
+
+~~~ swift
+var serverResponseCode: Int? = 404
+// serverResponseCode contains an actual Int value of 404
+serverResponseCode = nil
+// serverResponseCode now contains no value
+~~~
+
+#
+
+기본값을 제공하지 않고 옵셔널 변수를 정의하면 이 변수는 자동적으로 `nil` 로 설정됩니다.
+
+~~~ swift
+var surveyAnswer: String?
+// surveyAnswer is automatically set to nil
+~~~
+
+#
+
+`if` 문은 옵셔널과 `nil` 을 비교하여 옵셔널에 값이 포함되어 있는지 확인할 수 있습니다.
+
+"같음" 연산자 `(==)` 또는 "같지 않음" 연산자 `(!=)` 로 비교를 수행할 수 있습니다.
+
+옵셔널에 값이 있다면 `nil` 과 "같지 않음" 으로 간주 됩니다.
+
+~~~ swift
+let possibleNumber = "123"
+let convertedNumber = Int(possibleNumber)
 
 
+if convertedNumber != nil {
+    print("convertedNumber contains some integer value.")
+}
+// Prints "convertedNumber contains some integer value."
+~~~
+
+#
+
+옵셔널이 아닌 상수 또는 변수에는 `nil` 을 사용할 수 없습니다.
+
+코드에서 상수 또는 변수가 특정 조건에서 값이 없이 동작하려면 적절한 타입의 옵셔널 값으로 선언해야합니다.
+
+옵셔널이 아닌 값으로 선언된 상수 또는 변수는 `nil` 값이 포함되지 않도록 보장됩니다.
+
+옵셔널이 아닌 값에 `nil` 을 할당하면 컴파일 에러가 발생합니다.
+
+#
+
+옵셔널 값과 옵셔널이 아닌 값을 분리하면 누락될 수 있는 정보를 명시적으로 표시할 수 있고 누락된 값을 처리하는 코드를 더 쉽게 작성할 수 있습니다.
+
+이런 실수는 컴파일 타임에 오류가 발생하므로 옵셔널을 옵셔널이 아닌 것처럼 처리할 수 없습니다.
+
+값을 언래핑한 후에는 `nil` 에 대한 값을 검사할 필요가 없으므로 코드의 다른 부분에서 이 값을 동일하게 확인할 필요가 없습니다.
+
+#
+
+옵셔널 값에 접근할 때 코드에 `nil` 과 `nil` 이 아닌 값에 대해 모두 처리해야 합니다.
+
+다음 섹션에서 설명하듯이 값이 없을 때 수행할 수 있는 여러가지 작업이 있습니다.
+
+- 값이 `nil` 일 때 해당값에 대한 동작을 건너뜁니다.
+- `nil` 을 반환하거나 [옵셔널 체이닝 (Optional Chaining)]() 에서 설명한 `?.` 연산자를 사용해서 `nil` 값을 전파합니다.
+- `??` 연산자를 사용해서 대체값을 제공합니다.
+- `!` 연산자를 사용해서 프로그램 실행을 중지합니다.
+
+> Note    
+> Objective-C 에서는 `nil` 은 객체가 존재하지 않는 포인터 입니다.
+> Swift 에서는 `nil` 은 포인터가 아닙니다.
+> 특정 타입의 값이 없다는 의미 입니다.
+> 객체 타입 뿐만 아니라 모든 타입의 옵셔널은 `nil` 로 설정할 수 있습니다.
+
+<br>
+
+### 옵셔널 바인딩 (Optional Binding)
 
 
 
