--- a/Swift Documentation/2.Language Guide/1.The Basics.md
+++ b/Swift Documentation/2.Language Guide/1.The Basics.md
@@ -935,6 +935,89 @@ if convertedNumber != nil {
 
 ### 옵셔널 바인딩 (Optional Binding)
 
+옵셔널 바인딩 (optional binding) 을 사용하여 값이 포함되어 있는지 확인하고 값이 있는 경우 해당 값을 임시 상수 또는 변수에 할당하여 사용할 수 있게 해줍니다.
+
+옵셔널 바인딩은 `if`, `guard` 와 `while` 문에서 옵셔널에 값이 있는지 확인하고 단일 동작의 일부로 상수 또는 변수로 추출할 수 있습니다.
+
+`if`, `guard` 와 `while` 문에 대한 자세한 내용은 [제어 흐름 (Control Flow)]() 에서 자세히 다룹니다.
+
+#
+
+`if` 문에서 옵셔널 바인딩은 아래와 같이 사용합니다.
+
+~~~ swift
+if let <#constantName#> = <#someOptional#> {
+   <#statements#>
+}
+~~~
+
+#
+
+강제 언래핑 (forced unwrapping) 대신 옵셔널 바인딩을 사용하여 [옵셔널 (Optional)]() 섹션에 있는 `possibleNumber` 예제를 다시 작성할 수 있습니다.
+
+~~~ swift
+if let actualNumber = Int(possibleNumber) {
+    print("The string \"\(possibleNumber)\" has an integer value of \(actualNumber)")
+} else {
+    print("The string \"\(possibleNumber)\" couldn't be converted to an integer")
+}
+// Prints "The string "123" has an integer value of 123"
+~~~
+
+이 코드는 아래와 같이 읽을 수 있습니다.
+
+"`Int(possibleNumber)` 에 의해 반환된 옵셔널 `Int` 에 값이 포함되 있으면 `actualNumber` 라는 새로운 상수에 옵셔널에 포함된 값을 설정합니다."
+
+변환에 성공하면 `actualNumber` 상수는 `if` 문에 첫번째 중괄호 내에서 사용할 수 있습니다.
+
+옵셔널에 포함된 값으로 이미 초기화되었으며 해당하는 옵셔널 타입이 아닙니다.
+
+이 경우의 `possibleNumber` 의 타입은 `Int?` 이고 `actualNumber` 의 타입은 `Int` 입니다.
+
+#
+
+값에 접근한 후에 기존 옵셔널 상수 또는 변수를 참조할 필요가 없다면 같은 이름으로 새로운 상수 또는 변수를 사용할 수 있습니다.
+
+~~~ swift
+let myNumber = Int(possibleNumber)
+// Here, myNumber is an optional integer
+if let myNumber = myNumber {
+    // Here, myNumber is a non-optional integer
+    print("My number is \(myNumber)")
+}
+// Prints "My number is 123"
+~~~
+
+이 코드는 이전 예제에서의 코드와 마찬가지로 `myNumber` 가 값이 있는지 없는지를 먼저 확인합니다.
+
+`myNumber` 가 값이 있다면 해당 값이 새로운 `myNumber` 라는 상수에 설정됩니다.
+
+`if` 문 안에서 `myNumber` 는 옵셔널이 아닌 새로운 상수를 참조합니다.
+
+`if` 문 앞이나 뒤에 `myNumber` 를 작성하면 원래 옵셔널 정수 타입의 상수를 참조합니다.
+
+#
+
+이러한 코드는 일반적이기 때문에 옵셔널 값을 언래핑하는데 더 짧게 사용할 수 있습니다.
+
+언래핑할 상수 또는 변수의 이름만 작성합니다.
+
+언래핑된 새로운 상수 또는 변수는 암시적으로 같은 이름의 옵셔널 값을 사용합니다.
+
+~~~ swift
+if let myNumber {
+    print("My number is \(myNumber)")
+}
+// Prints "My number is 123"
+~~~
+
+
+
+
+
+
+
+
 
 
 
