--- a/Swift Documentation/2.Language Guide/1.The Basics.md
+++ b/Swift Documentation/2.Language Guide/1.The Basics.md
@@ -1011,6 +1011,282 @@ if let myNumber {
 // Prints "My number is 123"
 ~~~
 
+옵셔널 바인딩은 상수와 변수 둘다 사용이 가능합니다.
+
+`if` 문에 첫번째 중괄호에서 `myNumber` 의 값을 변경하고 싶다면 `if var myNumber` 로 대신 쓸 수 있으며 옵셔널에 포함된 값은 상수가 아닌 변수로 사용할 수 있습니다.
+
+`if` 문내에서 `myNumber` 를 바꾸면 이것은 지역 변수에만 적용되며 기존 언래핑된 옵셔널 상수 또는 변수에 적용되지 않습니다.
+
+#
+
+필요한 경우 `if` 문에 쉼표로 구분하여 옵셔널 바인딩 및 부울 조건을 여러개 포함할 수 있습니다.
+
+옵셔널 바인딩 값중 하나라도 `nil` 이거나 부울 조건이 `false` 로 판단되면 전체 `if` 문의 조건은 `false` 고 간주됩니다.
+
+#
+
+다음의 예제는 같은 `if` 문 입니다.
+
+~~~ swift
+if let firstNumber = Int("4"), let secondNumber = Int("42"), firstNumber < secondNumber && secondNumber < 100 {
+    print("\(firstNumber) < \(secondNumber) < 100")
+}
+// Prints "4 < 42 < 100"
+
+
+if let firstNumber = Int("4") {
+    if let secondNumber = Int("42") {
+        if firstNumber < secondNumber && secondNumber < 100 {
+            print("\(firstNumber) < \(secondNumber) < 100")
+        }
+    }
+}
+// Prints "4 < 42 < 100"
+~~~
+
+`if` 문에서 옵셔널 바인딩으로 생성된 상수와 변수는 `if` 문의 본문내에서만 사용할 수 있습니다.
+
+반대로 `guard` 문에서 생성된 상수와 변수는 [이른 종료 (Early Exit)]() 에서 설명되어 있듯이 `guard` 문의 다음 코드에서 사용이 가능합니다.
+
+<br>
+
+### 대체값 제공 (Providing a Fallback Value)
+
+누락된 값을 처리하는 또 다른 방법은 nil-coalescing 연사자 (`??`) 를 사용하여 기본값을 제공하는 방법입니다.
+
+옵셔널에서 `??` 의 왼편이 `nil` 이 아니면 값은 언래핑되고 사용됩니다.
+
+그렇지 않으면 `??` 의 오른편에 값이 사용됩니다. 
+
+예를들어 아래 코드는 이름이 지정되면 지정된 이름으로 인사하고 이름이 `nil` 이면 일반적인 인사를 사용합니다.
+
+~~~ swift
+let name: String? = nil
+let greeting = "Hello, " + (name ?? "friend") + "!"
+print(greeting)
+// Prints "Hello, friend!"
+~~~
+
+대체값을 제공하기 위해 `??` 를 사용하는 방법에 대한 자세한 내용은 [Nil-Coalescing 연산자 (Nil-Coalescing Operator)]() 를 참조하세요.
+
+<br>
+
+### 강제 언래핑 (Force Unwrapping)
+
+프로그래머의 에러 또는 손상된 상태 등 복구할 수 없는 에러를 `nil` 로 나타내는 경우 옵셔널의 이름뒤에 느낌표 (`!`) 를 추가하여 접근할 수 있습니다.
+
+이것을 옵셔널 값의 강제 언래핑 (force unwrapping) 이라고 합니다.
+
+`nil` 이 아닌 값에 강제 언래핑을 하면 언래핑된 값을 결과로 얻습니다.
+
+`nil` 값을 강제 언래핑하면 런타임 에러가 발생합니다.
+
+#
+
+`!` 는 사실상 [fatalError(_:file:line:)]() 의 더 짧은 작성법 입니다.
+
+예를 들어 아래 코드는 두가지 동일한 접근 방식을 보여줍니다.
+
+~~~ swift
+let possibleNumber = "123"
+let convertedNumber = Int(possibleNumber)
+
+
+let number = convertedNumber!
+
+
+guard let number = convertedNumber else {
+    fatalError("The number was invalid")
+}
+~~~
+
+위 코드의 두가지 방법은 값을 항상 가지는 `convertedNumber` 에 의존한는 것을 보여줍니다.
+
+위의 접근 방식 중 하나를 사용해서 해당 요구사항을 코드의 일부로 작성하면 런타임 시 요구사항이 참인지 확인할 수 있습니다.
+
+#
+
+데이터 요구사항을 적용하고 런타임 시 가정을 확인하는 방법에 대한 자세한 내용은 [역설과 전제조건 (Assertions and Preconditions)]() 을 참조하세요.
+
+<br>
+
+### 암시적으로 언래핑된 옵셔널 (Implicitly Unwrapped Optionals)
+
+위에서 설명한대로 옵셔널은 상수나 변수가 "값이 없음"을 가질 수 있음을 나타냅니다.
+
+옵셔널은 값이 존재하는지 확인하기 위해 `if` 문을 사용하여 확인할 수 있고 옵셔널 바인딩을 사용하여 조건부로 언래핑하여 옵셔널 값이 존재하는 경우 해당 값에 접근할 수 있습니다.
+
+#
+
+때로는 프로그램 구조에서 옵셔널이 값을 처음 설정한 후에는 항상 값을 갖는 것은 분명합니다.
+
+이러한 경우 항상 값이 있다고 가정할 수 있으므로 접근할 때마다 옵셔널의 값을 확인하고 언래핑할 필요가 없습니다.
+
+#
+
+이러한 옵셔널은 암시적으로 언래핑 된 옵셔널 (implicitly unwrapped optionals) 로 정의됩니다.
+
+옵셔널로 만들려는 타입뒤에 물음표 (`String?`) 를 작성하는 대신 느낌표 (`String!`) 로 암시적으로 언래핑 된 옵셔널을 작성합니다.
+
+사용할 때 옵셔널 이름의 뒤에 느낌표를 위치시키는 것보다 선언할 때 옵셔널 타입 뒤에 느낌표를 위치시키는 것이 더 좋습니다.
+
+#
+
+암시적으로 언래핑된 옵셔널은 옵셔널이 처음 정의된 직후에 옵셔널의 값이 존재하는 것으로 확인되고 그 이후에 모든 지점에서 확실히 존재한다고 가정할 수 있을 때 유용합니다.
+
+Swift 에서 암시적으로 언래핑된 옵셔널의 주요 사항은 [미소유 참조와 암시적으로 언래핑된 옵셔널 프로퍼티 (Unowned References and Implicitly Unwrapped Optioanl Properties)]() 에서 설명된 대로 클래스 초기화 중에 주로 사용합니다.
+
+#
+
+나중에 변수가 `nil` 이 될 가능성이 있다면 암시적으로 언래핑된 옵셔널을 사용하면 안됩니다.
+
+변수를 사용하는 동안 `nil` 값을 확인해야 한다면 일반적인 옵셔널 타입을 사용해야 합니다.
+
+#
+
+암시적으로 언래핑된 옵셔널은 내부적으로 옵셔널이지만 옵셔널에 접근할 때마다 옵셔널 값을 언래핑할 필요 없이 옵셔널이 아닌 값처럼 사용할 수도 있습니다.
+
+아래 예제에서는 래핑된 `String` 값을 명시적으로 접근할 때 옵셔널 문자열과 암시적으로 언래핑된 옵셔널 문자열간의 동작 차이를 보여줍니다.
+
+~~~ swift
+let possibleString: String? = "An optional string."
+let forcedString: String = possibleString! // Requires explicit unwrapping
+
+
+let assumedString: String! = "An implicitly unwrapped optional string."
+let implicitString: String = assumedString // Unwrapped automatically
+~~~
+
+암시적으로 언래핑된 옵셔널은 필요한 경우 옵셔널을 강제로 언래핑할 수 있는 권한을 부여하는 것으로 생각할 수 있습니다.
+
+암시적으로 언래핑된 옵셔널 값을 사용할 때 Swift 는 처음에는 기존의 옵셔널값으로 사용하려고 시도하고 옵셔널 값으로 사용할 수 없는 경우 Swift 는 값을 강제로 언래핑 합니다.
+
+위의 코드에서 옵셔널 값 `assumedString` 은 `implicitString` 이 명시적으로 옵셔널이 아닌 `String` 타입이기 때문에 `implicitString` 에 값을 할당하기 전에 강제로 언래핑 됩니다.
+
+#
+
+아래의 코드에서 `OptioanlString` 은 명시적 타입이 없으므로 기본적으로 옵셔널 입니다.
+
+~~~ swift
+let optionalString = assumedString
+// The type of optionalString is "String?" and assumedString isn't force-unwrapped.
+~~~
+
+#
+
+암시적으로 언래핑된 옵셔널이 `nil` 이고 래핑된 값에 접근하려고 하면 런타임 에러가 발생합니다.
+
+결과는 값을 포함하지 않는 일반적인 옵셔널을 강제 언래핑하기 위해 느낌표를 작성한 것과 똑같습니다.
+
+#
+
+암시적으로 언래핑된 옵셔널은 일반 옵셔널과 같은 방법으로 `nil` 체크를 할 수 있습니다.
+
+~~~ swift
+if assumedString != nil {
+    print(assumedString!)
+}
+// Prints "An implicitly unwrapped optional string."
+~~~
+
+#
+
+또한 옵셔널 바인딩과 함께 암시적으로 언래핑된 옵셔널을 사용하여 단일 문에서 해당 값을 확인하고 언래핑할 수도 있습니다.
+
+~~~ swift
+if let definiteString = assumedString {
+    print(definiteString)
+}
+// Prints "An implicitly unwrapped optional string."
+~~~
+
+<br>
+
+## 에러 처리 (Error Handling)
+
+프로그램이 실행되는 동안 발생할 수 있는 에러 조건에 응답하기 위해 에러 처리를 사용합니다.
+
+함수의 성공 또는 실패를 전달하기 위해 값의 존재 여부를 사용할 수 있는 옵셔널과 달리 에러 처리를 사용하면 실패의 근본 원인을 파악하고 필요한 경우 에러를 프로그램의 다른 부분으로 전파할 수 있습니다.
+
+#
+
+함수가 에러 조건을 만나면 에러가 발생합니다.
+
+그러면 해당 함수의 호출자는 에러를 포착하고 적절하게 응답할 수 있습니다.
+
+~~~ swift
+func canThrowAnError() throws {
+    // this function may or may not throw an error
+}
+~~~
+
+함수는 선언에서 `throws` 키워드를 사용하여 에러가 발생할 수 있음을 나타냅니다.
+
+에러가 발생할 수 이쓴ㄴ 함수를 호출하는 경우 표현식 앞에 `try` 키워드를 붙여야 합니다.
+
+#
+
+Swift 는 `catch` 절에 의해 처리될 때까지 현재 범위 밖으로 오류를 자동으로 전파합니다.
+
+~~~ swift
+do {
+    try canThrowAnError()
+    // no error was thrown
+} catch {
+    // an error was thrown
+}
+~~~
+
+`do` 문은 에러를 하나 이상의 `catch` 절로 전파할 수 있는 새로운 범위를 생성합니다.
+
+#
+
+다음은 다양한 에러 조건에 응답하기 위해 에러 처리를 사용하는 방법에 대한 예입니다.
+
+~~~ swift
+func makeASandwich() throws {
+    // ...
+}
+
+
+do {
+    try makeASandwich()
+    eatASandwich()
+} catch SandwichError.outOfCleanDishes {
+    washDishes()
+} catch SandwichError.missingIngredients(let ingredients) {
+    buyGroceries(ingredients)
+}
+~~~
+
+이 예에서 `makeASandwich()` 함수는 깨끗한 그릇을 사용할 수 없거나 재료가 없는 경우 에러가 발생합니다.
+
+`makeASandwich()` 함수는 에러가 발생할 수 있으므로 `try` 표현식으로 래핑됩니다.
+
+함수 호출을 `do` 문으로 래핑하면 발생한 모든 에러가 제공된 `catch` 절로 전파됩니다.
+
+#
+
+에러가 발생하지 않으면 `eatASandwich()` 함수가 호출됩니다.
+
+`SandwichError.outOfCleanDishes` 에러가 발생하면 `washDishes()` 함수가 호출됩니다.
+
+`SandwichError.missingIngredients` 에러가 발생하면 `catch` 패턴에 의해 캡처된 연관값 `[String]` 을 사용하여 `buyGroceries(_:)` 함수가 호출됩니다.
+
+#
+
+에러 발생, 포착, 전파에 대한 자세한 내용은 [에러 처리 (Error Handling)]() 에서 자세히 다룹니다.
+
+<br>
+
+## 역설과 전제조건 (Assertions and Preconditions)
+
+
+
+
+
+
+
 
 
 
