--- a/Swift Documentation/2.Language Guide/1.The Basics.md
+++ b/Swift Documentation/2.Language Guide/1.The Basics.md
@@ -1281,32 +1281,124 @@ do {
 
 ## 역설과 전제조건 (Assertions and Preconditions)
 
+역설과 전제조건 (Assertions and preconditions) 은 런타임에 발생하는 검사입니다.
 
+추가 코드를 사용하기 전에 이를 사용하여 필수조건이 충족되는지 확인할 수 있습니다.
 
+역설 또는 전제조건의 부울 조건이 `true` 이면 코드는 평소와 같이 진행됩니다.
 
+조건이 `false` 로 평가되면 프로그램의 현재 상태가 유효하지 않다는 것이고 코드 실행은 종료되고 앱이 종료됩니다.
 
+#
 
+역설과 전제조건을 사용하여 코딩하는 동안 가정하고 기대하는 바를 표현하므로 이를 코드의 일부로 포함할 수 있습니다.
 
+역설은 개발 과정에서 실수와 잘못된 가정을 찾는데 도움이 되고 전제조건은 프로덕션 문제를 감지하는데 도움이 됩니다.
 
+#
 
+런타임 시 기대치를 확인하는 것 외에도 역설과 전제조건도 코드 내에서 유용한 문서 형식이 됩니다.
 
+위의 [에러 처리 (Error Handling)]() 와 다르게 역설과 전제조건은 복구 가능하거나 예상되는 에러에 사용되지 않습니다.
 
+실패한 역설 또는 전제조건은 잘못된 프로그램 상태를 나타내므로 실패한 상태를 포착할 방법이 없습니다.
 
+유효하지 않은 상태에서 복구하는 것은 불가능 합니다.
 
+역설이 실패하면 프로그램 데이터 중 적어도 한 부분은 유효하지 않다는 의미 입니다.
 
+그러나 그것이 왜 유효하지 않은지 추가로 다른 상태도 유효하지 않은지 알 수 없습니다.
 
+#
 
+역설과 전제조건을 사용하는 것은 잘못된 조건이 발생할 가능성이 낮은 방식으로 코드를 설계하는 것을 대체할 수는 없습니다.
 
+그러나 이를 사용하여 유효한 데이터 및 상태를 적용하면 잘못된 상태가 발생할 경우 앱이 더 예측 가능하게 종료되고 문제를 더 쉽게 디버깅할 수 있습니다.
 
+가정을 확인하지 않으면 다른 곳의 코드가 눈에 띄게 실패하기 시작하고 사용자 데이터가 조용히 손상된 후에야 이런 종류의 문제를 발견할 수 있습니다.
 
+유효하지 않은 상태가 감지되는 즉시 실행을 중지하는 것도 유효하지 않은 상태로 인한 피해를 제한하는데 도움이 됩니다.
 
+#
 
+역설과 전제조건의 차이점은 확인 시점에 있습니다.
 
+역설은 디버그 빌드에서만 확인 되지만 전제조건은 디버그 및 프로덕션 빌드 모두에서 확인됩니다.
 
+프로덕션 빌드에서는 역설 내부의 조건은 평가되지 않습니다.
 
+이는 프로덕션 성능에 영향을 주지 않고 개발 프로세스 중에 원하는 만큼 역설을 사용할 수 있음을 의미합니다.
 
+<br>
 
+### 역설을 통한 디버깅 (Debugging with Assertions)
 
+Swift 표준 라이브러리에 [assert(_:_:file:line:)]() 함수를 호출하여 역설을 작성합니다.
+
+이 함수에 `true` 또는 `false` 로 판단될 표현식과 조건이 `false` 일 경우 출력될 메세지를 전달합니다.
+
+~~~ swift
+let age = -3
+assert(age >= 0, "A person's age can't be less than zero.")
+// This assertion fails because -3 isn't >= 0.
+~~~
+
+이 예에서는 `age` 가 음수가 아니고 `age >= 0` 이 `true` 일 경우 이어서 실행됩니다.
+
+`age` 가 음수이면 `age >= 0` 은 `false` 가 되고 역설이 실패하여 애플리케이션이 종료됩니다.
+
+#
+
+예를 들어 평범하게 조건만 반복하는 경우 메세지를 생략할 수 있습니다.
+
+~~~ swift
+assert(age >= 0)
+~~~
+
+#
+
+코드가 이미 조건을 확인한 경우 역설이 실패되었는지를 알 수 있는 [assertionFailure(_:file:line:)]() 함수를 사용합니다.
+
+~~~ swift
+if age > 10 {
+    print("You can ride the roller-coaster or the ferris wheel.")
+} else if age >= 0 {
+    print("You can ride the ferris wheel.")
+} else {
+    assertionFailure("A person's age can't be less than zero.")
+}
+~~~
+
+<br>
+
+### 강제 전제조건 (Enforcing Preconditions)
+
+조건이 거짓 일 가능성이 있을 때마다 전제조건을 사용하지만 코드가 순차적으로 실행되려면 확실하게 참이어야 합니다.
+
+예를 들어 어떤 값들이 범위를 벗어나는지 또는 함수에 유효한 값이 전달되었는지 확인하기 위해 전제조건을 사용합니다.
+
+#
+
+[precondition(_:_:file:line:)]() 함수를 호출하여 전제조건을 작성합니다.
+
+이 함수에 `true` 또는 `false` 로 판단될 표현식과 조건이 `false` 일 경우 출력될 메세지를 전달합니다.
+
+~~~ swift
+// In the implementation of a subscript...
+precondition(index > 0, "Index must be greater than zero.")
+~~~
+
+또한 [preconditionFailure(_:file:line:)]() 함수를 호출하여 실패가 발생했음을 나타낼 수도 있습니다.
+
+예를 들어 유효한 데이터는 스위치의 기본 케이스가 사용되었지만 모든 유효한 입력 데이터가 스위치의 다른 케이스 중 하나에 의해 처리되어야 하는 경우입니다.
+
+> Note    
+> 컴파일 시에 확인하지 않는 모드 (`-Ounchecked`) 로 컴파일하면 전제조건이 확인되지 않습니다.
+> 컴파일러는 전제조건이 항상 참이라고 가정하고 이에 따라 코드를 최적화 합니다.
+> 그러나 `fatalError(_:file:line:)` 함수는 최적화 설정에 관계없이 항상 실행을 중지합니다.
+>
+> 프로토타입 제작 및 초기 개발 단계에서 아직 구현되지 않은 기능에 대한 스텁을 만들기 위해 `fatalError(_:file:line:)` 함수를 사용할 수 있으며 `fatalError("Unimplemented")` 함수와 같이 작성할 수 있습니다.
+> 역설 또는 전제조건과 다르게 치명적인 에러는 절대 최적화 되지 않기 때문에 스텁 구현을 만나면 항상 중단 된다는 것을 확신할 수 있습니다.
 
 ***
 
