--- a/Swift Documentation/2.Language Guide/2.Basic Operators.md
+++ b/Swift Documentation/2.Language Guide/2.Basic Operators.md
@@ -1,7 +1,11 @@
 # Basic Operators
 
+할당, 산술, 비교 등의 작업을 수행합니다.
+
+연산자 (operator) 는 값을 확인, 변경 또는 결합하기 위해 사용하는 특수 기호 또는 문구 입니다.
+
 
 
 ***
-### ⬅️ [The Basics](https://github.com/DevWooHyeon/iOS_Documentation/blob/main/Swift%20Documentation/Swift%20Language%20guide/1.The%20Basics.md)
-### ➡️ [next]()
+### ⬅️ [The Basics](https://github.com/Developer-Nova/Swift-Documentation/blob/main/Swift%20Documentation/2.Language%20Guide/1.The%20Basics.md)
+### ➡️ [Strings and Characters](https://github.com/Developer-Nova/Swift-Documentation/blob/main/Swift%20Documentation/2.Language%20Guide/3.Strings%20and%20Characters.md)
