--- a/Swift Documentation/2.Language Guide/2.Basic Operators.md
+++ b/Swift Documentation/2.Language Guide/2.Basic Operators.md
@@ -4,6 +4,46 @@
 
 연산자 (operator) 는 값을 확인, 변경 또는 결합하기 위해 사용하는 특수 기호 또는 문구 입니다.
 
+예를 들어 더하기 연산자 (addition operator) (`+`) 는 `let i = 1 + 2` 에서 처럼 두개의 숫자를 더하고 논리 AND 연산자 (`&&`) 는 `if enteredDoorCode && passedRetinaScan` 에서 처럼 두 부울 (Boolean) 값을 결합합니다.
+
+#
+
+Swift 는 C 와 같은 언어에서 이미 알고있는 연산자를 지원하고 일반적인 코딩 에러를 제거하기 위해 여러 기능을 향상시킵니다.
+
+할당 연산자 (assignment operator) (`=`) 는 등호 연산자 (`==`) 를 사용할 때 실수로 사용되는 것을 방지하기 위해 값을 반환하지 않습니다.
+
+산술 연산자 (`+`, `-`, `*`, `/`, `%` 등) 는 타입이 수용할 수 있는 값의 범위보다 크거나 작은 숫자로 작업을 수행하려 할 때 예기치 않은 결과를 피하기 위해 값 오버플로우 (overflow) 를 감지하고 허락하지 않습니다.
+
+[오버플로우 연산자 (Overflow Operators)]() 에 설명된 대로 Swift 의 오버플로우 연산자를 사용하여 오버플로우 동작 값을 선택할 수 있습니다.
+
+#
+
+Swift 는 C 에서는 없는 값의 범위를 나타내는 `a..<b` 및 `a...b` 와 같은 범위 연산자를 제공합니다.
+
+#
+
+이 챕터에서는 Swift 의 기본 연산자에 대해 설명합니다.
+
+[고급 연산자 (Advanced Operators)]() 에서는 Swift 의 고급 연산자에 대해 다루고, 사용자 정의 연산자를 어떻게 정의하고, 사용자 정의 타입에 대한 표준 연산자를 구현하는 방법을 설명합니다.
+
+<br>
+
+## 술어 (Terminology)
+
+연산자는 단항 (unary), 이항 (binary), 삼항 (ternary) 입니다.
+
+- 단항 (unary) 연산자는 `-a` 처럼 단일 항목에 동작합니다. 단항 접두사 연산자는 `!b` 처럼 항목 바로 직전에 위치하고 단항 접미사 연산자는 `c!` 처럼 항목 바로 다음에 위치합니다.
+- 이항 (binary) 는 `2 + 3` 처럼 두개의 항목에 동작하고 두개의 항목 사이에 위치해야 하므로 위치는 고정입니다.
+- 삼항 (ternary) 연산자는 세개의 항목에 동작합니다. C 처럼 Swift 는 삼항 조건 연산자 (`a ? b : c`) 라는 단 하나의 삼항 연산자만 있습니다.
+
+연산자가 영향을 주는 값은 피연산자 입니다.
+
+`1 + 2` 표현식에서 `+` 기호는 중위 연산자 (infix operator) 이고 값 `1` 과 `2` 는 피연산자 입니다.
+
+<br>
+
+## 할당 연산자 (Assignment Operator)
+
 
 
 
