--- a/Swift Documentation/2.Language Guide/1.The Basics.md
+++ b/Swift Documentation/2.Language Guide/1.The Basics.md
@@ -627,7 +627,7 @@ let integerPi = Int(pi)
 
 <br>
 
-## 타입 별칠 (Type Aliases)
+## 타입 별칭(Type Aliases)
 
 타입 별칭 (Type Aliases) 은 이미 존재하는 타입을 다른 이름으로 정의합니다.
 
