--- a/Swift Documentation/2.Language Guide/2.Basic Operators.md
+++ b/Swift Documentation/2.Language Guide/2.Basic Operators.md
@@ -124,12 +124,43 @@ C 와 Objective-C 에서의 산술 연산자와 다르게 Swift 산술 연산자
 
 #
 
+나머지 연산자의 작동 방식은 아래의 그림과 같습니다.
 
+`9 % 4` 를 계산하기 위해 `9` 안에 얼마나 많은 `4` 가 들어가는지 알아야 합니다.
 
+<img width="350" src="https://github.com/Developer-Nova/Swift-Documentation/assets/123448121/16fa6daa-39ae-4194-a8f2-47a58894a266">
 
+`9` 에 `4` 가 2번 들어가고 오렌지 색과 마찬가지로 `1` 이 남는 것을 알 수 있습니다.
 
+Swift 에서는 다음과 같이 작성됩니다.
 
+~~~ swift
+9 % 4    // equals 1
+~~~
 
+`a % b` 의 결과를 구하기 위해 `%` 연산자는 아래의 방정식을 계산하고 출력으로 `remainder` 를 반환합니다.
+
+`a = (b x some multiplier) + remainder`
+
+이 방정식에서 `some multiplier` 는 `a` 에 들어갈 `b` 의 최대 배수 입니다.
+
+이 방정식에 `9` 와 `4` 를 넣고 계산하면 아래와 같습니다.
+
+`9 = (4 x 2) + 1`
+
+#
+
+`a` 에 음수 값에 대한 나머지를 계산할 때도 같은 방법으로 적용됩니다.
+
+~~~ swift
+-9 % 4   // equals -1
+~~~
+
+방정식에 `-9` 와 `4` 를 넣고 계산하면 아래와 같습니다.
+
+`-9 = (4 x -2) + -1`
+
+이 방정식에서는 `-1` 의 나머지를 얻습니다.
 
 
 
