--- a/Swift Documentation/2.Language Guide/2.Basic Operators.md
+++ b/Swift Documentation/2.Language Guide/2.Basic Operators.md
@@ -162,10 +162,62 @@ Swift 에서는 다음과 같이 작성됩니다.
 
 이 방정식에서는 `-1` 의 나머지를 얻습니다.
 
+`b` 에 음수는 무시되고 이것은 `a % b` 와 `a % -b` 는 항상 같은 결과를 얻는다는 의미입니다.
 
+<br>
 
+### 단항 뺄셈 연산자 (Unary Minus Operator)
 
+숫자 값의 부호는 `-` 접미사를 사용하여 변경할 수 있으며 이것을 단항 뺄셈 연산자 (unary minus operator) 라고 합니다.
 
+~~~ swift
+let three = 3
+let minusThree = -three       // minusThree equals -3
+let plusThree = -minusThree   // plusThree equals 3, or "minus minus three"
+~~~
+
+단항 빼기 연산자 (`-`) 는 공백없이 작동하는 값 바로 앞에 추가됩니다.
+
+<br>
+
+### 단항 덧셈 연산자 (Unary Plus Operator)
+
+단항 덧셈 연산자 (`+`) 는 어떠한 변경없이 그 값을 그대로 반환합니다.
+
+~~~ swift
+let minusSix = -6
+let alsoMinusSix = +minusSix  // alsoMinusSix equals -6
+~~~
+
+단항 덧셈 연산자는 실제로 아무런 동작을 하지 않지만 음수에 대한 단항 뺄셈 연산자를 사용할 때 양수에 대칭을 위해 사용할 수 있습니다.
+
+<br>
+
+## 복합 할당 연산자 (Compound Assignment Operators)
+
+C 처럼 Swift 는 할당 (`=`) 과 다른 연산자를 결합한 복합 할당 연산자 (compound assignment operators) 를 제공합니다.
+
+아래 예제는 덧셈 할당 연산자 (`+=`) 입니다.
+
+~~~ swift
+var a = 1
+a += 2
+// a is now equal to 3
+~~~
+
+표현식 `a += 2` 는 `a = a + 2` 의 짧은 표현입니다.
+
+덧셈과 할당은 효과적으로 두 작업을 동시에 수행하는 하나의 연산자로 결합됩니다.
+
+> Note    
+> 복합 할당 연산자는 값을 반환하지 않습니다.
+> 예를 들어 `let b = a += 2` 와 같이 작성할 수 없습니다.
+
+Swift 표준 라이브러리에서 제공하는 연산자에 대한 자세한 내용은 [연산자 선언 (Operator Declarations)]() 을 참고 바랍니다.
+
+<br>
+
+## 비교 연산자 (Comparison Operators)
 
 
 
