--- a/Swift Documentation/2.Language Guide/2.Basic Operators.md
+++ b/Swift Documentation/2.Language Guide/2.Basic Operators.md
@@ -234,6 +234,236 @@ Swift 는 아래의 비교 연산자 (comparison operators) 를 제공합니다.
 
 #
 
+각 비교 연산자는 해당 명령문이 `true` 인지 아닌지 판단하기 위해 `Bool` 값을 반환합니다.
+
+~~~ swift
+1 == 1   // true because 1 is equal to 1
+2 != 1   // true because 2 isn't equal to 1
+2 > 1    // true because 2 is greater than 1
+1 < 2    // true because 1 is less than 2
+1 >= 1   // true because 1 is greater than or equal to 1
+2 <= 1   // false because 2 isn't less than or equal to 1
+~~~
+
+#
+
+비교 연산자는 `if` 문과 같은 조건문에서 자주 사용됩니다.
+
+~~~ swift
+let name = "world"
+if name == "world" {
+    print("hello, world")
+} else {
+    print("I'm sorry \(name), but I don't recognize you")
+}
+// Prints "hello, world", because name is indeed equal to "world".
+~~~
+
+`if` 문에 대한 자세한 내용은 [제어 흐름 (Control Flow)]() 를 참조하세요.
+
+#
+
+타입이 동일하고 값의 갯수가 동일한 경우 두 튜플을 비교할 수 있습니다.
+
+튜플은 동일하지 않은 두 값을 찾을 때까지 왼쪽에서 오른쪽으로 한번에 하나씩 비교됩니다.
+
+두개의 값이 비교되고 해당 비교 결과에 따라 튜플 비교의 전체 결과가 결정됩니다.
+
+모든 요소가 동일하면 튜플 자체도 동일합니다.
+
+~~~ swift
+(1, "zebra") < (2, "apple")   // true because 1 is less than 2; "zebra" and "apple" aren't compared
+(3, "apple") < (3, "bird")    // true because 3 is equal to 3, and "apple" is less than "bird"
+(4, "dog") == (4, "dog")      // true because 4 is equal to 4, and "dog" is equal to "dog"
+~~~
+
+위의 예제 첫번째 줄에서 왼쪽에서 오른쪽으로 비교하는 동작을 확인할 수 있습니다.
+
+튜플의 다른 어떤값과 상관없이 `1` 이 `2` 보다 작기 때문에 `(1, "zebra")` 는 `(2, "apple")` 보다 작은 것으로 간주됩니다.
+
+튜플의 첫번째 요소에 의해 비교의 결과가 이미 결정되었기 때문에 `"zebra"` 가 `"apple"` 보다 더 작은지 여부는 아무런 상관이 없습니다.
+
+그러나 튜플의 첫번째 요소가 동일한 경우 두번째 요소가 비교됩니다.
+
+위 예제에서 두번째와 세번째 줄의 결과를 살펴보면 알 수 있습니다.
+
+#
+
+튜플은 해당 튜플의 각 값에 연산자를 적용할 수 있을 때에만 주어진 연산자로 비교할 수 있습니다.
+
+예를 들어 아래의 코드에서 `String` 과 `Int` 값은 `<` 연산자를 사용하여 비교가 가능하므로 `(String, Int)` 타입의 두튜플을 비교할 수 있습니다.
+
+반대로 `<` 연산자는 `Bool` 값에 적용할 수 없기 때문에 `(String, Bool)` 타입의 두튜플은 `<` 연산자로 비교할 수 없습니다.
+
+~~~ swift
+("blue", -1) < ("purple", 1)        // OK, evaluates to true
+("blue", false) < ("purple", true)  // Error because < can't compare Boolean values
+~~~
+
+> Note
+> Swift 표준 라이브러리는 7개 미만의 요소를 가지고 있는 튜플에 대해 튜플 비교 연산자를 제공합니다.
+> 7개 이상의 요소의 튜플을 비교하려면 비교 연산자를 직접 구현해야 합니다.
+
+<br>
+
+## 삼항 조건 연산자 (Ternary Conditional Operator)
+
+삼항 조건 연산자 (ternary conditional operator) 는 `question ? answer1 : answer2` 형태의 3가지 부분으로 이루어진 특수 연산자 입니다.
+
+`question` 이 참 또는 거짓인지에 따라 2개의 표현식 중 하나를 나타내는 식입니다.
+
+`question` 이 `true` 이면 `answer1` 을 반환하고 반대로 `false` 라면 `answer2` 를 반환합니다.
+
+#
+
+삼항 조건 연산자는 아래의 코드를 줄여서 표현한 것입니다.
+
+~~~ swift
+if question {
+    answer1
+} else {
+    answer2
+}
+~~~
+
+#
+
+다음은 테이블 행의 높이를 계산하는 예제입니다.
+
+테이블 행에 헤더가 있는 경우 행 높이는 컨텐츠 높이 보다 50포인트 더 커야 하고 행에 헤더가 없는 경우에는 20포인트 더 높아야 합니다.
+
+~~~ swift
+let contentHeight = 40
+let hasHeader = true
+let rowHeight = contentHeight + (hasHeader ? 50 : 20)
+// rowHeight is equal to 90
+~~~
+
+위의 예제는 아래 코드의 축약형 입니다.
+
+~~~ swift
+let contentHeight = 40
+let hasHeader = true
+let rowHeight: Int
+if hasHeader {
+    rowHeight = contentHeight + 50
+} else {
+    rowHeight = contentHeight + 20
+}
+// rowHeight is equal to 90
+~~~
+
+첫번째 예제에서 삼항 조건 연산자를 사용하면 `rowHeight` 를 한줄의 코드로 올바른 값을 설정할 수 있으며 두번째 예제에서 사용된 코드보다 간결합니다.
+
+삼항 조건 연산자는 두 표현식 중 하나를 결정하기 위한 효율적이고 간결한 표현을 제공합니다.
+
+그러나 삼항 조건 연산자를 사용시에는 주의가 필요합니다.
+
+간결성으로 인해 과도하게 사용하면 코드의 가독성이 떨어질 수 있습니다.
+
+삼항 조건 연산자의 여러 인스턴스를 하나의 복합 명령문으로 결합하는 것을 피해야 합니다.
+
+<br>
+
+## Nil-Coalescing 연산자 (Nil-Coalescing Operator)
+
+nil-coalescing 연산자 (nil-coalescing operator) (a ?? b) 는 옵셔널 `a` 에 값이 있으면 `a` 를 언래핑하고 `a` 가 `nil` 이면 기본값 `b` 를 반환합니다.
+
+`a` 표현식은 항상 옵셔널 타입입니다.
+
+표현식 `b` 는 `a` 에 저장된 타입과 같아야 합니다.
+
+#
+
+nil-coalescing 연산자는 아래 코드의 축약형 입니다.
+
+~~~ swift
+a != nil ? a! : b
+~~~
+
+위 코드는 삼항 조건 연산자를 사용하고 `a` 가 `nil` 이 아닐경우 `a` 안에 래핑된 값에 접근하기 위해 강제 언래핑 (`a!`) 하며 `a` 가 `nil` 일 경우 `b` 를 반환합니다.
+
+nil-coalescing 연산자는 조건 검사 및 언래핑을 간결하고 읽기 쉬운 형태로 캡슐화하는 보다 우아한 방법을 제공합니다.
+
+> Note     
+> `a` 의 값이 `nil` 이 아닐경우 `b` 의 값은 절대 반환되지 않습니다.
+> 이러한 경우를 연산 생략 (short-circuit evaluation) 이라 합니다.
+
+#
+
+아래 예제에서는 nil-coalescing 연산자를 사용하여 기본 색상 이름과 옵셔널 사용자 정의 색상 이름 중에서 선택합니다.
+
+~~~ swift
+let defaultColorName = "red"
+var userDefinedColorName: String?   // defaults to nil
+
+
+var colorNameToUse = userDefinedColorName ?? defaultColorName
+// userDefinedColorName is nil, so colorNameToUse is set to the default of "red"
+~~~
+
+`userDefinedColorName` 변수는 기본값이 `nil` 인 옵셔널 `String` 으로 정의 됩니다.
+
+`userDefinedColorName` 변수는 옵셔널 타입이기 때문에 값을 선택하기 위해 nil-coalescing 연산자를 사용할 수 있습니다.
+
+위의 예제에서 연산자는 `colorNameToUse` 라는 `String` 타입 변수의 초기값을 결정하는데 사용 됩니다.
+
+`userDefinedColorName` 변수가 `nil` 이기 때문에 표현식 `userDefinedColorName ?? defaultColorName` 은 `defaultColorName` 변수의 `"red"` 값을 반환합니다.
+
+#
+
+`userDefinedColorName` 변수에 `nil` 이 아닌 값을 할당하고 nil-coalescing 연산자로 체크를 다시 수행하면 기본값 대신 `userDefinedColorName` 내부에 포함된 값이 사용됩니다.
+
+~~~ swift
+userDefinedColorName = "green"
+colorNameToUse = userDefinedColorName ?? defaultColorName
+// userDefinedColorName isn't nil, so colorNameToUse is set to "green"
+~~~
+
+<br>
+
+## 범위 연산자 (Range Operators)
+
+Swift 는 값의 범위를 짧게 표현하기 위해 여러 범위 연산자 (range operators) 가 포함되어 있습니다.
+
+<br>
+
+### 폐쇄 범위 연산자 (Closed Range Operator)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
