--- a/Swift Documentation/2.Language Guide/2.Basic Operators.md
+++ b/Swift Documentation/2.Language Guide/2.Basic Operators.md
@@ -430,6 +430,24 @@ Swift 는 값의 범위를 짧게 표현하기 위해 여러 범위 연산자 (r
 
 ### 폐쇄 범위 연산자 (Closed Range Operator)
 
+폐쇄 범위 연산자 (closed range operator) (`a...b`) 는 값 `a` 와 `b` 가 포함된 `a` 부터 `b` 까지 실행되는 범위를 정의합니다.
+
+`a` 의 값은 `b` 보다 클 수 없습니다.
+
+#
+
+폐쇄 범위 연산자는 `for-in` 루프와 같이 모든 값을 사용하려는 범위를 반복할 때 유용합니다.
+
+~~~ swift
+for index in 1...5 {
+    print("\(index) times 5 is \(index * 5)")
+}
+// 1 times 5 is 5
+// 2 times 5 is 10
+// 3 times 5 is 15
+// 4 times 5 is 20
+// 5 times 5 is 25
+~~~
 
 
 
