--- a/Swift Documentation/2.Language Guide/2.Basic Operators.md
+++ b/Swift Documentation/2.Language Guide/2.Basic Operators.md
@@ -449,7 +449,45 @@ for index in 1...5 {
 // 5 times 5 is 25
 ~~~
 
+`for-in` 루프에 대한 자세한 설명은 [제어 흐름 (Control Flow)]() 을 참조 하세요.
 
+<br>
+
+### 반-개방 범위 연산자 (Half-Open Range Operator)
+
+반-개방 범위 연산자 (half-Open range operator) (`a..<b`) 는 `a` 에서 `b` 까지의 범위를 실행하지만 `b` 를 포함하지 않는 범위를 정의합니다.
+
+이것은 첫번째 값은 포함하지만 마지막 값은 포함되지 않기 때문에 반-개방 (half-open) 이라고 합니다.
+
+폐쇄 범위 연산자와 마찬가지로 `a` 의 값은 `b` 보다 클 수 없습니다.
+
+`a` 의 값이 `b` 와 같으면 결과 범위는 비어 있게 됩니다.
+
+#
+
+반-개방 범위는 배열과 같이 0부터 시작하는 리스트로 작업할 때 특히 유용합니다.
+
+리스트의 최대 길이까지는 포함하지 않고 그 전까지만 계산하기 때문에 유용합니다.
+
+~~~ swift
+let names = ["Anna", "Alex", "Brian", "Jack"]
+let count = names.count
+for i in 0..<count {
+    print("Person \(i + 1) is called \(names[i])")
+}
+// Person 1 is called Anna
+// Person 2 is called Alex
+// Person 3 is called Brian
+// Person 4 is called Jack
+~~~
+
+배열은 4개의 항목을 가지고 있지만 `0..<count` 는 반-개방 범위이기 때문에 오직 `3` (배열의 마지막 요소 인덱스) 까지 카운트 합니다.
+
+배열에 대한 자세한 내용은 [배열 (Arrays)]() 을 참조하세요.
+
+<br>
+
+### 단-방향 범위 (One-Sided Ranges)
 
 
 
