--- a/Swift Documentation/2.Language Guide/2.Basic Operators.md
+++ b/Swift Documentation/2.Language Guide/2.Basic Operators.md
@@ -489,15 +489,78 @@ for i in 0..<count {
 
 ### 단-방향 범위 (One-Sided Ranges)
 
+폐쇄 범위 연산자에는 가능한 한 한방향으로 계속되는 범위에 대한 대체 형식이 있습니다.
+
+예를 들어 인덱스 `2` 부터 배열의 끝까지 배열의 모든 요소를 포함하는 범위 입니다.
+
+이러한 경우 범위 연산자의 한쪽 값을 생략할 수 있습니다.
+
+이러한 범위의 경우 연산자가 오직 한쪽의 값만 가지고 있으므로 단-방향 범위 (one-sided range) 라고 합니다.
+
+~~~ swift
+for name in names[2...] {
+    print(name)
+}
+// Brian
+// Jack
 
 
+for name in names[...2] {
+    print(name)
+}
+// Anna
+// Alex
+// Brian
+~~~
 
+#
 
+반-개방 범위 연산자 또한 마지막 값만 사용하여 작성된 단-방향 형식을 가질 수 있습니다.
 
+양쪽에 값이 모두 있을 때와 마찬가지로 마지막 값은 범위에 포함되지 않습니다.
 
+~~~ swift
+for name in names[..<2] {
+    print(name)
+}
+// Anna
+// Alex
+~~~
 
+#
 
+단-방향 범위는 위와 같은 상황 말고도 다른 컨텍스트에서도 사용될 수 있습니다.
 
+반복이 시작되어야 하는 위치가 명확하지 않기 때문에 첫번째 값을 생략하는 단-방향 범위에 대해 반복할 수 없습니다.
+
+반복문에서 단-방향 범위의 마지막 값은 생략할 수 있습니다.
+
+그러나 범위가 무한정 계속되므로 루프에 대해 명시적인 종료 조건을 추가해야 합니다.
+
+아래 코드와 같이 단-방향 범위에 특정 값이 포함되어 있는지 확인할 수도 있습니다.
+
+~~~ swift
+let range = ...5
+range.contains(7)   // false
+range.contains(4)   // true
+range.contains(-1)  // true
+~~~
+
+<br>
+
+## 논리 연산자 (Logical Operators)
+
+논리 연산자 (Logiacal operators) 는 부울 로직 값을 `true` 와 `false` 로 수정하거나 결합합니다.
+
+Swift 는 C 기반 언어에서 볼 수 있는 세가지 표준 논리 연산자를 제공합니다.
+
+- 논리적 NOT (`!a`)
+- 논리적 AND (`a && b`)
+- 논리적 OR (`a || b`)
+
+<br>
+
+### 논리적 NOT 연산자 (Logical NOT Operator)
 
 
 
