--- a/Swift Documentation/2.Language Guide/2.Basic Operators.md
+++ b/Swift Documentation/2.Language Guide/2.Basic Operators.md
@@ -562,7 +562,31 @@ Swift 는 C 기반 언어에서 볼 수 있는 세가지 표준 논리 연산자
 
 ### 논리적 NOT 연산자 (Logical NOT Operator)
 
+논리적 NOT 연산자 (logical NOT operator) (`!a`) 는 부울 값을 반전하여 `true` 를 `false` 로 `false` 를 `true` 로 반대로 만듭니다.
 
+논리적 NOT 연산자는 접두사 연산자 이며 동작할 값 바로 앞에 공백없이 위치합니다.
+
+아래 예제와 같이 "`a` 가 아니다" 라고 읽을 수 있습니다.
+
+~~~ swift
+let allowedEntry = false
+if !allowedEntry {
+    print("ACCESS DENIED")
+}
+// Prints "ACCESS DENIED"
+~~~
+
+`if !allowedEntry` 구문은 "만약 엔트리가 허락되지 않는다면" 이라고 읽을 수 있습니다.
+
+다음 줄은 "엔트리가 허락되지 않음" 이 참일 때, 이 말은 `allowedEntry` 가 `false` 일 경우에만 실행된다는 의미입니다.
+
+#
+
+예제에서와 같이 부울 상수와 변수 이름을 신중하게 선택하면 코드를 읽기 쉽고 간결하게 유지하는 동시에 중복 부정과 논리적 상태의 혼동을 피하는데 도움이 됩니다.
+
+<br>
+
+### 논리적 AND 연산자 (Logical AND Operator)
 
 
 
