--- a/Swift Documentation/2.Language Guide/2.Basic Operators.md
+++ b/Swift Documentation/2.Language Guide/2.Basic Operators.md
@@ -588,7 +588,32 @@ if !allowedEntry {
 
 ### 논리적 AND 연산자 (Logical AND Operator)
 
+논리적 AND 연산자 (logical AND operator) (`a && b`) 는 두 값이 모두 `true` 여야 `true` 를 표현하는 논리적 표현식을 만듭니다.
 
+두 값 중 하나라도 `false` 이면 전체 표현식도 `false` 가 됩니다.
+
+실제로 첫번째 값이 `false` 이면 전체 표현식이 `true` 의 결과를 얻을 수 없기 때문에 두번째 값은 평가되지도 않습니다.
+
+이러한 경우를 연산 생략 (short-circuit evaluation) 이라고 합니다.
+
+#
+
+아래 예제는 두개의 `Bool` 값이 `true` 일 경우에만 접근을 허용합니다.
+
+~~~ swift
+let enteredDoorCode = true
+let passedRetinaScan = false
+if enteredDoorCode && passedRetinaScan {
+    print("Welcome!")
+} else {
+    print("ACCESS DENIED")
+}
+// Prints "ACCESS DENIED"
+~~~
+
+<br>
+
+### 논리적 OR 연산자 (Logical OR Operator)
 
 
 
