--- a/Swift Documentation/2.Language Guide/2.Basic Operators.md
+++ b/Swift Documentation/2.Language Guide/2.Basic Operators.md
@@ -615,31 +615,92 @@ if enteredDoorCode && passedRetinaScan {
 
 ### 논리적 OR 연산자 (Logical OR Operator)
 
+논리적 OR 연산자 (logical OR operator) (`a || b`) 는 두개의 인접한 파이프 문자 (`|`) 로 구성된 중위 연산자 (infix operator) 입니다.
 
+이를 사용하여 두 값중 하나라도 `true` 이면 전체 표현식이 `true` 가 되는 논리적 표현식을 만들 수 있습니다.
 
+#
 
+위에서 논리적 AND 연산자와 마찬가지로 논리적 OR 연산자는 표현식을 고려하기 위해 연산 생략 (short-circuit evaluation) 을 사용합니다.
 
+논리적 OR 연산자의 좌변이 `true` 이면 표현식의 결과는 바뀌지 않기 때문에 우변은 고려하지 않습니다.
 
+#
 
+아래 예제에서 첫번째 `Bool` 값 (`hasDoorKey`) 은 `false` 이지만 두번째 값 (`knowsOverridePassword`) 은 `true` 입니다.
 
+하나의 값이 `true` 이므로 전체 표현식은 `true` 가 되고 접근이 허용됩니다.
 
+~~~ swift
+let hasDoorKey = false
+let knowsOverridePassword = true
+if hasDoorKey || knowsOverridePassword {
+    print("Welcome!")
+} else {
+    print("ACCESS DENIED")
+}
+// Prints "Welcome!"
+~~~
 
+<br>
 
+### 논리적 연산자 결합 (Combining Logical Operators)
 
+여러개의 논리적 연산자를 결합하여 더 긴 복합 표현식을 만들 수 있습니다.
 
+~~~ swift
+if enteredDoorCode && passedRetinaScan || hasDoorKey || knowsOverridePassword {
+    print("Welcome!")
+} else {
+    print("ACCESS DENIED")
+}
+// Prints "Welcome!"
+~~~
 
+이 예제에서는 복합 `&&` 와 `||` 연산자를 사용하여 긴 복합 표현식을 만듭니다.
 
+그러나 `&&` 와 `||` 연산자는 두개의 값에서만 동작하므로 이것은  서로 연결된 세개의 작은 표현식입니다.
 
+이 예제는 아래와 같이 읽을 수 있습니다.
 
+#
 
+올바른 출입문 코드를 입력하고 망막 스캔을 통과했거나 유효한 키를 가지고 있거나 긴급 비밀번호를 알고 있을 경우에 접근이 허락됩니다.
 
+#
 
+`enteredDoorCode`, `passedRetinaScan`, `hasDoorKey` 의 값을 기반으로 첫번째 2개의 표현식은 `false` 입니다.
 
+그러나 긴급 비밀번호는 알고 있으므로 (`true`) 이 표현식의 결과는 `true` 입니다.
 
+> Note    
+> Swift 논리적 연산자 `&&` 와 `||` 은 왼쪽 우선결합 (left-associative) 입니다.
+> 그 의미는 여러개의 논리적 연산자로 이루어진 복합 표현식은 가장 왼쪽부터 판단 된다는 뜻입니다.
 
+<br>
 
+### 명시적 소괄호 (Explicit Parentheses)
 
+복잡한 표현식의 의도를 더 쉽게 읽을 수 있도록 소괄호를 포함하는 것이 결과에 영향이 없을때 소괄호를 포함하는 것이 유용한 경우가 있습니다.
 
+위의 출입문 접근 예제에서 의도를 명확하게 하기위해 복합 표현식의 첫번째 부분에 소괄호를 추가하면 유용합니다.
+
+~~~ swift
+if (enteredDoorCode && passedRetinaScan) || hasDoorKey || knowsOverridePassword {
+    print("Welcome!")
+} else {
+    print("ACCESS DENIED")
+}
+// Prints "Welcome!"
+~~~
+
+소괄호는 처음 두개의 값을 전체 논리에서 별도의 부분으로 고려되도록 해줍니다.
+
+복합 표현식의 결과는 바뀌지 않지만 전체적인 의도는 독자에게 더 명확해집니다.
+
+간결함 보다 가독성이 항상 더 선호됩니다.
+
+의도를 명확하게 하는데 도움이 되는 곳에 소괄호를 사용해야합니다.
 
 ***
 
