Update 3.Strings and Characters.md

--- a/Swift Documentation/2.Language Guide/3.Strings and Characters.md
+++ b/Swift Documentation/2.Language Guide/3.Strings and Characters.md
@@ -1,1 +1,11 @@
-# Strings and Characters
+# Strings and Characters (문자열과 문자)
+
+
+
+
+
+***
+
+### ⬅️ [Basic Operators](https://github.com/Developer-Nova/Swift-Documentation/blob/main/Swift%20Documentation/2.Language%20Guide/2.Basic%20Operators.md)
+
+### ➡️ [Collection Types](https://github.com/Developer-Nova/Swift-Documentation/blob/main/Swift%20Documentation/2.Language%20Guide/4.Collection%20Types.md)
