--- a/Swift Documentation/2.Language Guide/4.Collection Types.md
+++ b/Swift Documentation/2.Language Guide/4.Collection Types.md
@@ -1,1 +1,9 @@
-# Collection Types
+# Collection Types (컬렉션 타입)
+
+
+
+***
+
+### ⬅️ [Strings and Characters](https://github.com/Developer-Nova/Swift-Documentation/blob/main/Swift%20Documentation/2.Language%20Guide/3.Strings%20and%20Characters.md)
+
+### ➡️ [Control Flow](https://github.com/Developer-Nova/Swift-Documentation/blob/main/Swift%20Documentation/2.Language%20Guide/5.Control%20Flow.md)
