--- a/Swift Documentation/2.Language Guide/5.Control Flow.md
+++ b/Swift Documentation/2.Language Guide/5.Control Flow.md
@@ -1,1 +1,9 @@
-# Control Flow
+# Control Flow (제어 흐름)
+
+
+
+***
+
+### ⬅️ [Collection Types](https://github.com/Developer-Nova/Swift-Documentation/blob/main/Swift%20Documentation/2.Language%20Guide/4.Collection%20Types.md)
+
+### ➡️ [Functions](https://github.com/Developer-Nova/Swift-Documentation/blob/main/Swift%20Documentation/2.Language%20Guide/6.Functions.md)
