Update 3.Strings and Characters.md

--- a/Swift Documentation/2.Language Guide/3.Strings and Characters.md
+++ b/Swift Documentation/2.Language Guide/3.Strings and Characters.md
@@ -1,5 +1,25 @@
 # Strings and Characters (문자열과 문자)
 
+텍스트를 저장하고 다룹니다.
+
+문자열 (String) 은 `"hello, world"` 또는 `"albatross"` 와 같은 문자의 연속입니다.
+
+Swift 문자열은 `String` 타입으로 표현됩니다.
+
+`String` 은 `Character` 값의 모음을 포함하여 다양한 방법으로 접근할 수 있습니다.
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
