--- a/Swift Documentation/2.Language Guide/3.Strings and Characters.md
+++ b/Swift Documentation/2.Language Guide/3.Strings and Characters.md
@@ -8,7 +8,34 @@ Swift 문자열은 `String` 타입으로 표현됩니다.
 
 `String` 은 `Character` 값의 모음을 포함하여 다양한 방법으로 접근할 수 있습니다.
 
+#
 
+Swift 의 `String` 과 `Character` 타입은 코드의 텍스트를 처리하는 빠른 유니코드 호환 방법을 제공합니다.
+
+문자열 생성 및 조작을 위한 구문은 C 와 유사한 문자열 리터럴 구문을 사용하여 가볍고 읽기 쉽습니다.
+
+문자열 연결은 두 문자열 사이에 `+` 연산자를 함께 결합하여 간단하게 연결이 가능하고 상수 또는 변수중에 선택하여 문자열 가변성을 관리합니다.
+
+Swift 의 다른 값과 마찬가지로 문자열 보간이라는 프로세스를 통해 문자열을 사용하여 상수, 변수, 리터럴 및 표현식을 긴 문자열에 삽입할 수 있습니다.
+
+이를 통해 화면에 표시, 저장, 출력을 위한 사용자 정의 문자열 값을 쉽게 생성할 수 있습니다.
+
+#
+
+간단한 구문임에도 Swift 의 `String` 타입은 빠르고 현대적인 문자열 구현입니다.
+
+모든 문자열은 인코딩에 독립적인 유니코드 문자로 구성되어 있으며 다양한 유니코드 표현의 문자에 접근할 수 있도록 지원합니다.
+
+> Note    
+> Swift 의 `String` 타입은 Foundation 의 `NSString` 클래스와 연결되어 있습니다.
+> Foundation 은 또한 `NSString` 에 의해 정의된 메서드를 노출시키기 위해 `String` 을 확장합니다.
+> 즉 Foundation 을 import 하면 타입 캐스팅 없이 `String` 에서 `NSString` 메서드를 접근할 수 있습니다.
+>
+> Foundation 과 Cocoa 에서 `String` 사용에 대한 자세한 내용은 [String 과 NSString 의 연결 (Bridging Between String and NSString)]() 을 참조하세요.
+
+<br>
+
+## 문자열 리터럴 (String Literals)
 
 
 
