Update 3.Strings and Characters.md

--- a/Swift Documentation/2.Language Guide/3.Strings and Characters.md
+++ b/Swift Documentation/2.Language Guide/3.Strings and Characters.md
@@ -129,8 +129,44 @@ It also ends with a line break.
 
 ### 문자열 리터럴에 특수 문자 (Special Characters in String Literals)
 
+문자열 리터럴은 아래와 같이 특수 문자를 포함할 수 있습니다.
 
+- 이스케이프된 특수 문자들인 `\0` (null 문자), `\\` (백슬래시), `\t` (수평 탭), `\n` (개행), `\r` (캐리지 리턴), `\"` (큰따옴표) 및 `'` (작은따옴표)
 
+- `\u{n 으로 작성된 임의의 유니코드 스칼라 값}` 여기서 n 은 1~8자리의 16진수 입니다. (유니코드는 아래 [유니코드 (Unicode)]() 에서 설명합니다.)
+
+#
+
+아래 코드는 이러한 특수 문자의 네가지 예를 보여줍니다.
+
+상수 `wiseWords` 에는 이스케이프된 큰따옴표 두개가 포함되어 있습니다.
+
+`dollarSign`, `blackHeart` 및 `sparklingHeart` 는 유니코드 스칼라 형태를 보여줍니다.
+
+~~~ swift
+let wiseWords = "\"Imagination is more important than knowledge\" - Einstein"
+// "Imagination is more important than knowledge" - Einstein
+let dollarSign = "\u{24}"        // $,  Unicode scalar U+0024
+let blackHeart = "\u{2665}"      // ♥,  Unicode scalar U+2665
+let sparklingHeart = "\u{1F496}" // 💖, Unicode scalar U+1F496
+~~~
+
+#
+
+여러줄 문자열 리터럴은 하나가 아닌 세개의 큰따옴표를 사용하기 때문에 여러줄 문자열 리터럴 내부에 큰따옴표 (`"`) 를 이스케이프 하지 않고 포함할 수 있습니다.
+
+여러줄 문자열에 텍스트를 포함하려면 `"""` 큰따옴표중 하나 이상을 이스케이프 처리해야 합니다.
+
+~~~ swift
+let threeDoubleQuotationMarks = """
+Escaping the first quotation mark \"""
+Escaping all three quotation marks \"\"\"
+"""
+~~~
+
+<br>
+
+### 확장된 문자열 구분기호 (Extended String Delimiters)
 
 
 
