--- a/Swift Documentation/2.Language Guide/6.Functions.md
+++ b/Swift Documentation/2.Language Guide/6.Functions.md
@@ -1,1 +1,8 @@
-# Functions
+# Functions (함수)
+
+
+***
+
+### ⬅️ [Control Flow](https://github.com/Developer-Nova/Swift-Documentation/blob/main/Swift%20Documentation/2.Language%20Guide/5.Control%20Flow.md)
+
+### ➡️ [Closures](https://github.com/Developer-Nova/Swift-Documentation/blob/main/Swift%20Documentation/2.Language%20Guide/7.Closures.md)
