--- a/Swift Documentation/2.Language Guide/7.Closures.md
+++ b/Swift Documentation/2.Language Guide/7.Closures.md
@@ -1,1 +1,8 @@
-# Closures
+# Closures (클로저)
+
+
+***
+
+### ⬅️ [Functions](https://github.com/Developer-Nova/Swift-Documentation/blob/main/Swift%20Documentation/2.Language%20Guide/6.Functions.md)
+
+### ➡️ [Enumerations](https://github.com/Developer-Nova/Swift-Documentation/blob/main/Swift%20Documentation/2.Language%20Guide/8.Enumerations.md)
