--- a/Swift Documentation/2.Language Guide/8.Enumerations.md
+++ b/Swift Documentation/2.Language Guide/8.Enumerations.md
@@ -1,1 +1,8 @@
-# Enumerations
+# Enumerations (열거형)
+
+
+***
+
+### ⬅️ [Closures](https://github.com/Developer-Nova/Swift-Documentation/blob/main/Swift%20Documentation/2.Language%20Guide/7.Closures.md)
+
+### ➡️ [Structures and Classes](https://github.com/Developer-Nova/Swift-Documentation/blob/main/Swift%20Documentation/2.Language%20Guide/9.Structures%20and%20Classes.md)
