Update 9.Structures and Classes.md

--- a/Swift Documentation/2.Language Guide/9.Structures and Classes.md
+++ b/Swift Documentation/2.Language Guide/9.Structures and Classes.md
@@ -1,1 +1,8 @@
-# Structures and Classes
+# Structures and Classes (구조체와 클래스)
+
+
+***
+
+### ⬅️ [Enumerations](https://github.com/Developer-Nova/Swift-Documentation/blob/main/Swift%20Documentation/2.Language%20Guide/8.Enumerations.md)
+
+### ➡️ [Properties](https://github.com/Developer-Nova/Swift-Documentation/blob/main/Swift%20Documentation/2.Language%20Guide/10.Properties.md)
