--- a/Swift Documentation/2.Language Guide/10.Properties.md
+++ b/Swift Documentation/2.Language Guide/10.Properties.md
@@ -1,1 +1,8 @@
-# Properties
+# Properties (프로퍼티)
+
+
+***
+
+### ⬅️ [Structures and Classes](https://github.com/Developer-Nova/Swift-Documentation/blob/main/Swift%20Documentation/2.Language%20Guide/9.Structures%20and%20Classes.md)
+
+### ➡️ [Methods](https://github.com/Developer-Nova/Swift-Documentation/blob/main/Swift%20Documentation/2.Language%20Guide/11.Methods.md)
