Update 3.Strings and Characters.md

--- a/Swift Documentation/2.Language Guide/3.Strings and Characters.md
+++ b/Swift Documentation/2.Language Guide/3.Strings and Characters.md
@@ -168,6 +168,78 @@ Escaping all three quotation marks \"\"\"
 
 ### 확장된 문자열 구분기호 (Extended String Delimiters)
 
+아무런 영향없이 문자열에 특수 문자를 포함하기 위해 확장된 구분기호 안에 문자열 리터럴을 배치할 수 있습니다.
+
+문자열을 큰따옴표 (`"`) 안에 넣고 숫자 기호 (`#`) 로 묶습니다.
+
+예를 들어 문자열 리터럴  `#"Line 1\nLine 2"#` 을 출력하면 두줄로 출력되지 않고 개행 문자가 출력됩니다.
+
+#
+
+문자열 리터럴에서 특수 문자의 효과가 필요하다면 이스케이프 문자 (`\`) 다음에 선언된 숫자 기호의 숫자만큼 숫자 기호를 포함하면 됩니다.
+
+예를 들어 문자열 `#"Line 1\nLine 2"#` 에 개행을 수행하고 싶다면 `#"Line 1\#nLine 2"#` 로 작성하면 됩니다.
+
+비슷한 예로 `###"Line 1\###nLine 2"###` 도 개행이 이루어집니다.
+
+#
+
+확장된 구분기호를 사용하여 생성된 문자열 리터럴은 여러줄 문자열 리터럴일 수 있습니다.
+
+여러줄 문자열에 텍스트 `"""` 을 포함하기 위해 리터럴을 종료하는 기본 동작을 재정의 하여 확장된 구분기호를 사용할 수 있습니다.
+
+~~~ swift
+let threeMoreDoubleQuotationMarks = #"""
+Here are three more double quotes: """
+"""#
+~~~
+
+<br>
+
+### 빈 문자열 초기화 (Initializing an Empty String)
+
+더 긴 문자열을 만들기 위한 시작점으로 빈 `String` 값을 만들려면 빈 문자열 리터럴을 변수에 할당하거나 초기화 구문으로 새 `String` 인스턴스를 초기화 합니다.
+
+~~~ swift
+var emptyString = ""               // empty string literal
+var anotherEmptyString = String()  // initializer syntax
+// these two strings are both empty, and are equivalent to each other
+~~~
+
+#
+
+`String` 값은 `Boolean` 의 `isEmpty` 프로퍼티로 비어있는지 확인할 수있습니다.
+
+~~~ swift
+if emptyString.isEmpty {
+    print("Nothing to see here")
+}
+// Prints "Nothing to see here"
+~~~
+
+<br>
+
+## 문자열 가변성 (String Mutability)
+
+특정 요소를 `String` 변수 (수정 가능한 경우) 또는 상수 (수정할 수 없는 경우) 에 할당 하여 수정 (또는 변경) 할 수 있는지 여부를 알 수 있습니다.
+
+~~~ swift
+var variableString = "Horse"
+variableString += " and carriage"
+// variableString is now "Horse and carriage"
+
+
+let constantString = "Highlander"
+constantString += " and another Highlander"
+// this reports a compile-time error - a constant string cannot be modified
+~~~
+
+> Note    
+> 이 접근방식은 문자열이 변경 될 수 있는지 여부를 나타내기 위해 두 클래스 (`NSString` 및 `NSMutableString`) 중에서 선택하는 Objective-C 와 Cocoa 의 문자열 변경과 다릅니다.
+
+<br>
+
+## 문자열은 값 타입 (String Are Value Types)
 
 
 
