Update 3.Strings and Characters.md

--- a/Swift Documentation/2.Language Guide/3.Strings and Characters.md
+++ b/Swift Documentation/2.Language Guide/3.Strings and Characters.md
@@ -196,7 +196,7 @@ Here are three more double quotes: """
 
 <br>
 
-### 빈 문자열 초기화 (Initializing an Empty String)
+## 빈 문자열 초기화 (Initializing an Empty String)
 
 더 긴 문자열을 만들기 위한 시작점으로 빈 `String` 값을 만들려면 빈 문자열 리터럴을 변수에 할당하거나 초기화 구문으로 새 `String` 인스턴스를 초기화 합니다.
 
@@ -240,6 +240,69 @@ constantString += " and another Highlander"
 <br>
 
 ## 문자열은 값 타입 (String Are Value Types)
+
+Swift 의 `String` 타입은 값 타입 (value type) 입니다.
+
+새로운 `String` 값을 생성하면 `String` 값은 함수, 메서드에 전달될 때나 상수 또는 변수에 할당될 때 해당 값이 복사 됩니다.
+
+각각의 경우 기존 `String` 값의 새로운 복사본이 생성되고 원본이 아닌 새로운 복사본이 전달되거나 할당됩니다.
+
+값 타입은 [구조체와 열거형은 값 타입 (Structures and Enumerations Are Value Types)]() 에서 설명합니다.
+
+#
+
+Swift 의 `String` 의 기본 복사 동작은 함수 또는 메서드가 `String` 값을 전달할 때 그 값이 어디서 왔는지에 관계없이 정확한 `String` 값을 소유하고 있음을 보장합니다.
+
+전달된 문자열은 직접 수정하지 않는 한 수정되지 않을 것임을 확신할 수 있습니다.
+
+#
+
+내부적으로 Swift 의 컴파일러는 문자열 사용을 최적화하여 꼭 필요한 경우에만 실제 복사가 이루어지도록 합니다.
+
+이것은 문자열을 값 타입으로 사용하여 작업할 때 항상 뛰어난 성능을 얻을 수 있다는 의미입니다.
+
+<br>
+
+## 문자 작업 (Working with Characters)
+
+문자열과 `for-in` 루프로 `String` 의 각각의 `Character` 값에 접근할 수 있습니다.
+
+~~~ swift
+for character in "Dog!🐶" {
+    print(character)
+}
+// D
+// o
+// g
+// !
+// 🐶
+~~~
+
+`for-in` 루프는 [For-In 루프 (For-In Loops)]() 에서 설명합니다.
+
+#
+
+또는 `Character` 타입을 명시하고 단일 문자 문자열 리터럴을 할당하여 독립형 `Character` 상수 또는 변수를 생성할 수 있습니다.
+
+~~~ swift
+let exclamationMark: Character = "!"
+~~~
+
+#
+
+`String` 값은 초기화 인수로 `Character` 값의 배열을 전달해 생성할 수 있습니다.
+
+~~~ swift
+let catCharacters: [Character] = ["C", "a", "t", "!", "🐱"]
+let catString = String(catCharacters)
+print(catString)
+// Prints "Cat!🐱"
+~~~
+
+<br>
+
+## 문자열과 문자 연결 (Concatenating Strings and Characters)
+
 
 
 
