--- a/Swift Documentation/2.Language Guide/11.Methods.md
+++ b/Swift Documentation/2.Language Guide/11.Methods.md
@@ -3,6 +3,6 @@
 
 ***
 
-### ⬅️ [Properties]()
+### ⬅️ [Properties](https://github.com/Developer-Nova/Swift-Documentation/blob/main/Swift%20Documentation/2.Language%20Guide/10.Properties.md)
 
-### ➡️ [Subscripts]()
+### ➡️ [Subscripts](https://github.com/Developer-Nova/Swift-Documentation/blob/main/Swift%20Documentation/2.Language%20Guide/12.Subscripts.md)
