--- a/Swift Documentation/2.Language Guide/12.Subscripts.md
+++ b/Swift Documentation/2.Language Guide/12.Subscripts.md
@@ -1,1 +1,8 @@
 # Subscripts
+
+
+***
+
+### ⬅️ [Methods](https://github.com/Developer-Nova/Swift-Documentation/blob/main/Swift%20Documentation/2.Language%20Guide/11.Methods.md)
+
+### ➡️ [Inheritance](https://github.com/Developer-Nova/Swift-Documentation/blob/main/Swift%20Documentation/2.Language%20Guide/13.Inheritance.md)
