--- a/Swift Documentation/2.Language Guide/13.Inheritance.md
+++ b/Swift Documentation/2.Language Guide/13.Inheritance.md
@@ -1,1 +1,8 @@
 # Inheritance
+
+
+***
+
+### ⬅️ [Subscripts](https://github.com/Developer-Nova/Swift-Documentation/blob/main/Swift%20Documentation/2.Language%20Guide/12.Subscripts.md)
+
+### ➡️ [Initialization](https://github.com/Developer-Nova/Swift-Documentation/blob/main/Swift%20Documentation/2.Language%20Guide/14.Initialization.md)
